make compatability with jdk8
Signed-off-by: drake_wang <wxl250059@alibaba-inc.com>